Tutorial previous button alignment fix

--- a/app/style/Tutorial.less
+++ b/app/style/Tutorial.less
@@ -113,6 +113,7 @@
     background-size: 12px;
     background-image: var(--x-grey);
     float: right;
+    padding: 0;
   }
 
   .tutorial-standard-page {
@@ -137,6 +138,8 @@
     text-align: center;
     height: 35vw;
     width: 35vw;
+    min-width: 340px;
+    min-height: 340px;
   }
 
   .tutorial-image {
